--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,10 @@ endif()
 include_directories(
     ./includes/
     ./vendor/glad/include/
-    ./vendor/glfw/include/)
+    ./vendor/glfw/include/
+    ./vendor/stb/include/)
 
-file(GLOB VENDORS_SOURCES vendor/glad/src/glad.c)
+file(GLOB VENDORS_SOURCES vendor/glad/src/glad.c vendor/stb/src/stb_image.cpp)
 file(GLOB PROJECT_HEADERS ./includes/*.hpp)
 file(GLOB PROJECT_SOURCES ./src/*.cpp)
 file(GLOB PROJECT_CONFIGS CMakeLists.txt
